--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "env": "^0.0.2",
     "express": "^4.19.2",
     "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "mysql2": "^3.11.0",
     "npm": "^10.8.3",
