--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "env": "^0.0.2",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "mysql2": "^3.11.0",
+    "node-cron": "^3.0.3",
     "npm": "^10.8.3",
     "uuid": "^10.0.0"
   }
